@@ -1,5 +1,8 @@
 2015-01-08  Karl Berry  <karl@gnu.org>
 
+	* texindex.in: also look for ../share/texinfo/texindex.awk,
+	relative to dirname $0.
+
 	* ti.twjr (Invocation_name): new global, renamed from Prgname.
 	(usage): use it, a la coreutils.
 	* texindex.in: pass it (value $0), with -v.
